UpdatePaymentController da ish bor

--- a/src/main/resources/com/example/cms/Teacher/Attendance/make-attendance.fxml
+++ b/src/main/resources/com/example/cms/Teacher/Attendance/make-attendance.fxml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="makeAttendancePane" prefHeight="720.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cms.Teacher.Attendance.MakeAttendanceController">
+   <children>
+      <VBox prefHeight="140.0" />
+      <VBox layoutX="272.0" layoutY="240.0" prefHeight="279.0" prefWidth="346.0" />
+      <Label fx:id="statusLabel" layoutX="274.0" layoutY="517.0">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
