--- a/src/main/resources/com/example/cms/Admin/Students/show-student.fxml
+++ b/src/main/resources/com/example/cms/Admin/Students/show-student.fxml
@@ -33,13 +33,12 @@
             </Label>
          </children>
       </VBox>
-      <ScrollPane layoutX="87.0" layoutY="164.0" prefHeight="490.0" prefWidth="731.0">
+      <ScrollPane layoutX="147.0" layoutY="165.0" prefHeight="490.0" prefWidth="609.0">
          <content>
-            <TableView fx:id="table" prefHeight="487.0" prefWidth="731.0">
+            <TableView fx:id="table" prefHeight="487.0" prefWidth="609.0">
               <columns>
                 <TableColumn fx:id="colId" prefWidth="47.0" text="id" />
-                <TableColumn fx:id="colName" prefWidth="124.0" text="Ismi" />
-                  <TableColumn fx:id="colSurname" prefWidth="145.0" text="Familiyasi" />
+                  <TableColumn fx:id="colFIO" prefWidth="145.0" text="FIO" />
                   <TableColumn fx:id="colPhone" prefWidth="136.0" text="Telefon" />
                   <TableColumn fx:id="colSubject" minWidth="2.0" prefWidth="134.0" text="Fani" />
                   <TableColumn fx:id="colGroup" minWidth="2.0" prefWidth="125.0" text="Guruhi" />
