--- a/src/main/resources/com/example/cms/Admin/Students/update-student.fxml
+++ b/src/main/resources/com/example/cms/Admin/Students/update-student.fxml
@@ -60,28 +60,8 @@
             </Label>
          </children>
       </VBox>
-      <VBox layoutX="205.0" layoutY="214.0" prefHeight="360.0" prefWidth="480.0">
+      <VBox layoutX="205.0" layoutY="245.0" prefHeight="360.0" prefWidth="480.0">
          <children>
-            <HBox prefHeight="50.0" prefWidth="200.0">
-               <children>
-                  <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="80.0" text="Ismi">
-                     <font>
-                        <Font size="26.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="nameField" prefHeight="50.0" prefWidth="320.0" style="-fx-border-radius: 10px; -fx-border-width: 1px; -fx-border-color: #000; -fx-background-color: transparent;">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <HBox.margin>
-                        <Insets bottom="15.0" left="100.0" />
-                     </HBox.margin>
-                  </TextField>
-               </children>
-            </HBox>
             <HBox prefHeight="50.0" prefWidth="200.0">
                <children>
                   <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="150.0" text="Familiyasi">
@@ -89,7 +69,7 @@
                         <Font size="26.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="surnameField" prefHeight="50.0" prefWidth="320.0" style="-fx-border-radius: 10px; -fx-border-width: 1px; -fx-border-color: #000; -fx-background-color: transparent;">
+                  <TextField fx:id="fioField" prefHeight="50.0" prefWidth="320.0" style="-fx-border-radius: 10px; -fx-border-width: 1px; -fx-border-color: #000; -fx-background-color: transparent;">
                      <font>
                         <Font size="24.0" />
                      </font>
@@ -97,10 +77,13 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="15.0" left="30.0" />
+                        <Insets bottom="20.0" left="30.0" />
                      </HBox.margin>
                   </TextField>
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </HBox>
             <HBox prefHeight="50.0" prefWidth="200.0">
                <children>
@@ -117,7 +100,7 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="15.0" />
+                        <Insets bottom="20.0" />
                      </HBox.margin>
                   </TextField>
                </children>
@@ -137,7 +120,7 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="15.0" left="60.0" />
+                        <Insets bottom="20.0" left="60.0" />
                      </HBox.margin>
                   </TextField>
                </children>
@@ -164,7 +147,7 @@
             </HBox>
          </children>
       </VBox>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="535.0" layoutY="556.0" mnemonicParsing="false" onAction="#updateStudent" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #0073FF; -fx-background-radius: 10px;" text="yangilash" textAlignment="RIGHT" textFill="WHITE">
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="535.0" layoutY="535.0" mnemonicParsing="false" onAction="#updateStudent" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #0073FF; -fx-background-radius: 10px;" text="yangilash" textAlignment="RIGHT" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
@@ -172,7 +155,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Label fx:id="statusLabel" layoutX="211.0" layoutY="569.0">
+      <Label fx:id="statusLabel" layoutX="209.0" layoutY="551.0">
          <font>
             <Font size="16.0" />
          </font>
