--- a/src/main/resources/com/example/cms/Admin/Teachers/show-teacher.fxml
+++ b/src/main/resources/com/example/cms/Admin/Teachers/show-teacher.fxml
@@ -33,13 +33,12 @@
             </Label>
          </children>
       </VBox>
-      <ScrollPane layoutX="34.0" layoutY="164.0" prefHeight="490.0" prefWidth="822.0">
+      <ScrollPane layoutX="102.0" layoutY="164.0" prefHeight="490.0" prefWidth="701.0">
          <content>
-            <TableView fx:id="table" prefHeight="487.0" prefWidth="821.0">
+            <TableView fx:id="table" prefHeight="487.0" prefWidth="700.0">
                <columns>
                   <TableColumn fx:id="colId" prefWidth="47.0" text="id" />
-                  <TableColumn fx:id="colName" prefWidth="108.0" text="Ismi" />
-                  <TableColumn fx:id="colSurname" prefWidth="114.0" text="Familiyasi" />
+                  <TableColumn fx:id="colFIO" prefWidth="114.0" text="FIO" />
                   <TableColumn fx:id="colPhone" prefWidth="114.0" text="Telefon" />
                   <TableColumn fx:id="colSubject" prefWidth="112.0" text="Fani" />
                   <TableColumn fx:id="colGroup" minWidth="2.0" prefWidth="104.0" text="Guruhi" />
