--- a/src/main/resources/com/example/cms/Admin/Teachers/update-teacher.fxml
+++ b/src/main/resources/com/example/cms/Admin/Teachers/update-teacher.fxml
@@ -62,34 +62,14 @@
       </VBox>
       <VBox layoutX="200.0" layoutY="214.0" prefHeight="496.0">
          <children>
-            <HBox prefHeight="50.0" prefWidth="452.0">
-               <children>
-                  <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="80.0" text="Ismi">
-                     <font>
-                        <Font size="26.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="nameField" prefHeight="50.0" prefWidth="320.0" style="-fx-border-radius: 10px; -fx-border-width: 1px; -fx-border-color: #000; -fx-background-color: transparent;">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <HBox.margin>
-                        <Insets bottom="10.0" left="100.0" />
-                     </HBox.margin>
-                  </TextField>
-               </children>
-            </HBox>
             <HBox prefHeight="50.0" prefWidth="200.0">
                <children>
-                  <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="150.0" text="Familiyasi">
+                  <Label contentDisplay="CENTER" prefHeight="50.0" prefWidth="150.0" text="FIO">
                      <font>
                         <Font size="26.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="surnameField" prefHeight="50.0" prefWidth="320.0" style="-fx-border-radius: 10px; -fx-border-width: 1px; -fx-border-color: #000; -fx-background-color: transparent;">
+                  <TextField fx:id="fioField" prefHeight="50.0" prefWidth="320.0" style="-fx-border-radius: 10px; -fx-border-width: 1px; -fx-border-color: #000; -fx-background-color: transparent;">
                      <font>
                         <Font size="24.0" />
                      </font>
@@ -97,7 +77,7 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="10.0" left="30.0" />
+                        <Insets bottom="15.0" left="30.0" />
                      </HBox.margin>
                   </TextField>
                </children>
@@ -117,7 +97,7 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="10.0" />
+                        <Insets bottom="15.0" />
                      </HBox.margin>
                   </TextField>
                </children>
@@ -137,7 +117,7 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="10.0" left="60.0" />
+                        <Insets bottom="15.0" left="60.0" />
                      </HBox.margin>
                   </TextField>
                </children>
@@ -157,7 +137,7 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="10.0" left="50.0" />
+                        <Insets bottom="15.0" left="50.0" />
                      </HBox.margin>
                   </TextField>
                </children>
@@ -177,7 +157,7 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="10.0" left="50.0" />
+                        <Insets bottom="15.0" left="50.0" />
                      </HBox.margin>
                   </TextField>
                </children>
@@ -197,12 +177,12 @@
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
-                        <Insets bottom="10.0" left="60.0" />
+                        <Insets bottom="15.0" left="60.0" />
                      </HBox.margin>
                   </TextField>
                </children>
             </HBox>
-            <Button mnemonicParsing="false" onAction="#updateTeacher" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #0073FF; -fx-background-radius: 10px;" text="yangilash" textFill="WHITE">
+            <Button contentDisplay="CENTER" mnemonicParsing="false" onAction="#updateTeacher" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #0073FF; -fx-background-radius: 10px;" text="yangilash" textFill="WHITE">
                <VBox.margin>
                   <Insets left="330.0" />
                </VBox.margin>
@@ -215,7 +195,7 @@
             </Button>
          </children>
       </VBox>
-      <Label fx:id="statusLabel" layoutX="205.0" layoutY="667.0">
+      <Label fx:id="statusLabel" layoutX="205.0" layoutY="637.0">
          <font>
             <Font size="16.0" />
          </font>
