--- a/src/main/resources/com/example/cms/Admin/admin-profile.fxml
+++ b/src/main/resources/com/example/cms/Admin/admin-profile.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane fx:id="myProfilePane" prefHeight="720.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cms.Admin.AdminProfileController">
    <children>
-      <VBox fx:id="vboxProfile" layoutX="195.0" layoutY="79.0" prefHeight="560.0" prefWidth="500.0" style="-fx-background-color: #fff;">
+      <VBox fx:id="vboxProfile" layoutX="195.0" layoutY="79.0" prefHeight="560.0" prefWidth="500.0" style="-fx-background-color: #fff; -fx-background-radius: 20px;">
          <children>
             <Circle fx:id="avatar" fill="#1f93ff" radius="80.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
                <VBox.margin>
@@ -21,7 +21,7 @@
             </Circle>
             <HBox maxWidth="340.0" prefHeight="40.0" prefWidth="340.0">
                <VBox.margin>
-                  <Insets left="80.0" top="30.0" />
+                  <Insets left="80.0" top="40.0" />
                </VBox.margin>
                <children>
                   <Label contentDisplay="CENTER" prefHeight="40.0" prefWidth="62.0" text="F.I.O">
@@ -44,23 +44,6 @@
                      </font>
                   </Label>
                   <Label fx:id="labelPhone" alignment="CENTER_RIGHT" prefHeight="54.0" prefWidth="308.0" text="+998 97 767 20 97" textAlignment="RIGHT">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-               </children>
-               <VBox.margin>
-                  <Insets left="80.0" top="15.0" />
-               </VBox.margin>
-            </HBox>
-            <HBox maxWidth="340.0" prefHeight="40.0" prefWidth="340.0">
-               <children>
-                  <Label contentDisplay="CENTER" prefHeight="40.0" prefWidth="121.0" text="Email:">
-                     <font>
-                        <Font name="System Bold" size="20.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="labelEmail" alignment="CENTER_RIGHT" prefHeight="54.0" prefWidth="308.0" text="example@mail.com" textAlignment="RIGHT">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -112,7 +95,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
                <VBox.margin>
-                  <Insets left="280.0" top="10.0" />
+                  <Insets left="280.0" top="20.0" />
                </VBox.margin>
             </Button>
          </children>
