--- a/src/main/resources/com/example/cms/Teacher/Payment/show-payment.fxml
+++ b/src/main/resources/com/example/cms/Teacher/Payment/show-payment.fxml
@@ -1,13 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="showPaymentPane" prefHeight="720.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cms.Teacher.Payment.ShowPaymentController">
+    <children>
+        <VBox>
+            <children>
+                <Button mnemonicParsing="false" onAction="#goBack" text="Back">
+                    <cursor>
+                        <Cursor fx:constant="HAND" />
+                    </cursor>
+                    <VBox.margin>
+                        <Insets left="45.0" top="40.0" />
+                    </VBox.margin>
+                </Button>
+                <Label text="To'lov ma'lumotlari">
+                    <font>
+                        <Font name="System Bold" size="26.0" />
+                    </font>
+                    <VBox.margin>
+                        <Insets left="45.0" top="20.0" />
+                    </VBox.margin>
+                </Label>
+            </children>
+        </VBox>
+        <ScrollPane layoutX="87.0" layoutY="164.0" prefHeight="490.0" prefWidth="731.0">
+            <content>
+                <TableView fx:id="table" prefHeight="487.0" prefWidth="731.0">
+                    <columns>
+                        <TableColumn fx:id="colId" prefWidth="47.0" text="id" />
+                        <TableColumn fx:id="colFIO" prefWidth="124.0" text="FIO" />
+                        <TableColumn fx:id="colSubject" prefWidth="145.0" text="Fani" />
+                        <TableColumn fx:id="colAmount" prefWidth="136.0" text="Miqdori" />
+                        <TableColumn fx:id="colMonth" minWidth="2.0" prefWidth="134.0" text="Oy" />
+                        <TableColumn fx:id="colDate" minWidth="2.0" prefWidth="125.0" text="Sana" />
+                    </columns>
+                </TableView>
+            </content>
+        </ScrollPane>
+    </children>
 </AnchorPane>
