--- a/src/main/resources/com/example/cms/Teacher/Attendance/make-attendance.fxml
+++ b/src/main/resources/com/example/cms/Teacher/Attendance/make-attendance.fxml
@@ -1,18 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="makeAttendancePane" prefHeight="720.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cms.Teacher.Attendance.MakeAttendanceController">
    <children>
-      <VBox prefHeight="140.0" />
-      <VBox layoutX="272.0" layoutY="240.0" prefHeight="279.0" prefWidth="346.0" />
-      <Label fx:id="statusLabel" layoutX="274.0" layoutY="517.0">
+      <VBox prefHeight="140.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#goBack" text="Back">
+               <VBox.margin>
+                  <Insets left="45.0" top="40.0" />
+               </VBox.margin>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+            <Label opacity="0.5" text="Davomat qilish">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="45.0" top="20.0" />
+               </VBox.margin>
+            </Label>
+            <Label text="Davomat ma'lumotlarini kiriting">
+               <font>
+                  <Font name="System Bold" size="26.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="45.0" top="5.0" />
+               </VBox.margin>
+            </Label>
+         </children>
+      </VBox>
+      <Label fx:id="statusLabel" layoutX="225.0" layoutY="653.0">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="571.0" layoutY="644.0" mnemonicParsing="false" onAction="#makeAttendance" prefHeight="43.0" prefWidth="95.0" style="-fx-background-color: #0073FF; -fx-background-radius: 10px;" text="OK" textAlignment="RIGHT" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <ScrollPane layoutX="225.0" layoutY="168.0" prefHeight="462.0" prefWidth="441.0">
+         <content>
+            <TableView fx:id="table" prefHeight="454.0" prefWidth="441.0">
+               <columns>
+                  <TableColumn fx:id="colId" prefWidth="58.0" text="id" />
+                  <TableColumn fx:id="colFio" prefWidth="150.0" text="FIO" />
+                  <TableColumn fx:id="colSubject" prefWidth="138.0" text="Fani" />
+                  <TableColumn fx:id="colStatus" prefWidth="90.0" text="Statusi" />
+               </columns>
+            </TableView>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
