--- a/src/main/resources/com/example/cms/Teacher/teacher-menu.fxml
+++ b/src/main/resources/com/example/cms/Teacher/teacher-menu.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -100,6 +101,13 @@
       </VBox>
    </left>
    <center>
-      <AnchorPane fx:id="defaultTeacherProfilePane" prefHeight="720.0" prefWidth="890.0" BorderPane.alignment="CENTER" />
+      <AnchorPane fx:id="defaultTeacherProfilePane" prefHeight="720.0" prefWidth="890.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="231.0" layoutY="338.0" opacity="0.6" text="O'qituvchi oynasiga xush kelibsiz, menyulardan birini tanlang">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+         </children></AnchorPane>
    </center>
 </BorderPane>
